@@ -511,7 +511,7 @@ void aKregatorView::slotContextMenu(KListView*, QListViewItem* item, const QPoin
 
    if (!feed)
        return;
-   
+
    m_tabs->showPage(m_mainTab);
 
    QWidget *w;
@@ -883,6 +883,7 @@ void aKregatorView::slotMouseButtonPressed(int button, QListViewItem * item, con
     if (item && button==Qt::MidButton)
     {
         ArticleListItem *i = static_cast<ArticleListItem *>(item);
+        //KRun::runURL(i->article().link(), "text/html", false, false); TODO: add possibility to select which one to use; open in tab, open in background tab or open in external browser..
         slotOpenTab(i->article().link());
     }
 }
